# rust_fps_net

./: Cargo.toml  TODO.md
src/: main.rs  oldmain.rs
src/game/: app_state.rs  game.rs  mod.rs
src/game/cursor/: cursor.rs
src/game/level/: level.rs  mod.rs  targets.rs
src/game/player/: camera_controller.rs  input.rs  player.rs  player_movement.rs  player_shooting.rs
src/game/shooting/: tracer.rs
src/game/ui/: crosshair.rs  mod.rs  ui.rs
src/game/window/: window.rs
